--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -19,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "reactstrap": "^9.0.1",
+    "recharts": "^2.1.13",
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
